--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Netflix</title>
 </head>
-<body>
+<body class="hero-section">
     <header>
         <a href=""><img src="img/logo-header.png" alt="Logo Netflix" id="logo-netflix"></a>
     </header>
